--- a/curso-guanabara-js/aula04/ex001.html
+++ b/curso-guanabara-js/aula04/ex001.html
@@ -21,6 +21,8 @@
 
     <script>
         window.alert ('Minha primeira mensagem!')     
+        window.confirm ('Está Gostando de JS?')
+        window.prompt('Qual é o seu nome?')
     </script>
 
 </body>
