--- a/curso-guanabara-js/aula06/ex002.html
+++ b/curso-guanabara-js/aula06/ex002.html
@@ -20,9 +20,8 @@
     <p>Já me livrei da maldição!</p>
 
     <script>
-        //window.alert ('Minha primeira mensagem!')     
-        window.confirm ('Está Gostando de JS?')
-        window.prompt('Qual é o seu nome')
+       var nome = window.prompt('Qual é o seu nome?')
+       window.alert('É um prazer te conhecer, ' + nome + '!' )
     </script>
 
 </body>
