--- a/curso-guanabara-js/aula06/ex003.html
+++ b/curso-guanabara-js/aula06/ex003.html
@@ -20,10 +20,28 @@
     <p>Já me livrei da maldição!</p>
 
     <script>
-        //window.alert ('Minha primeira mensagem!')     
-        window.confirm ('Está Gostando de JS?')
-        window.prompt('Qual é o seu nome')
+       var n1 = Number(window.prompt('Digite um número'))
+       var n2 = Number(window.prompt('Digite outro número'))
+       var s = n1 + n2 
+       window.alert('A soma dos números é: ' + String(s))
+
     </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
